# agent-project

./: .gitignore  01_desarrollo_asistente.ipynb  02_chat_interactivo.ipynb  README.md  agente.ipynb  app.py  pyproject.toml  requirements.txt  utils.py
chroma_db/: chroma.sqlite3
