[project]
name = "agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "pypdf>=6.10.2",
    "streamlit>=1.57.0",
]
